--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
