--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vue.js App</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>VueTodoリスト</title>
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -63,7 +66,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-  <script src="main.js"></script>
 </body>
 
 </html>
